# pytask-parallel

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  MANIFEST.in  README.md  README.rst  codecov.yml  environment.yml  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
.conda/: meta.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: continuous-integration-workflow.yml  main.yml  publish-to-pypi.yml
docs/source/: api.md  changes.md  coiled.md  conf.py  custom_executors.md  dask.md  developers_guide.md  index.md  quickstart.md  remote_backends.md
docs_src/: custom_executors.py
docs_src/coiled/: coiled_functions.py  coiled_functions_task.py
scripts/: __init__.py  pending_status_demo.py
src/pytask_parallel/: __init__.py  _version.py  backends.py  build.py  callbacks.py  cli.py  config.py  custom.py  dask.py  execute.py  logging.py  nodes.py  plugin.py  processes.py  scheduler.py  threads.py  typing.py  utils.py  wrappers.py
tests/: conftest.py  test_backends.py  test_callbacks.py  test_capture.py  test_cli.py  test_config.py  test_execute.py  test_remote.py
tests/test_jupyter/: test_functional_interface.ipynb  test_functional_interface_w_relative_path.ipynb
