[project]
name = "pytask_parallel"
description = "Parallelize the execution of tasks with pytask."
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
requires-python = ">=3.8"
dependencies = [
    "attrs>=21.3.0",
    "click",
    "cloudpickle",
    "loky",
    "pluggy>=1.0.0",
    "pytask>=0.4.5",
    "rich",
]
dynamic = ["version"]

[[project.authors]]
name = "Tobias Raabe"
email = "raabe@posteo.de"

[project.optional-dependencies]
dask = ["dask[complete]", "distributed"]
docs = [
    "furo",
    "ipython",
    "matplotlib",
    "myst-parser",
    "nbsphinx",
    "sphinx",
    "sphinx-click",
    "sphinx-copybutton",
    "sphinx-design>=0.3",
    "sphinx-toolbox",
    "sphinxext-opengraph",
]
test = [
    "pytask-parallel[all]",
    "nbmake",
    "pytest",
    "pytest-cov",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/pytask-dev/pytask-parallel"
Changelog = "https://github.com/pytask-dev/pytask-parallel/blob/main/CHANGES.md"
Documentation = "https://github.com/pytask-dev/pytask-parallel"
Github = "https://github.com/pytask-dev/pytask-parallel"
Tracker = "https://github.com/pytask-dev/pytask-parallel/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false
platforms = ["any"]
license-files = ["LICENSE"]

[tool.check-manifest]
ignore = ["src/pytask_parallel/_version.py"]

[project.entry-points.pytask]
pytask_parallel = "pytask_parallel.plugin"

[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.rye.scripts]
clean-docs = { cmd = "rm -rf docs/build" }
build-docs = { cmd = "sphinx-build -b html docs/source docs/build" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "src/pytask_parallel/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pytask_parallel"]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[tool.ruff]
target-version = "py38"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-ignore = [
    "ANN101",  # type annotating self
    "ANN401",  # flake8-annotate typing.Any
    "COM812",  # Comply with ruff-format.
    "ISC001",  # Comply with ruff-format.
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "PLR2004", "S101"]
"docs/source/conf.py" = ["INP001"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = ["--nbmake"]
# Do not add src since it messes with the loading of pytask-parallel as a plugin.
testpaths = ["tests"]
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = [".idea", ".tox"]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING.*:",
    "\\.\\.\\.",
    "def __repr__",
]
