[project]
name = "pytask_parallel"
description = "Parallelize the execution of tasks with pytask."
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
dependencies = [
    "attrs>=21.3.0",
    "click>=8.1.8,!=8.2.0",
    "cloudpickle",
    "loky",
    "pluggy>=1.0.0",
    "pytask>=0.5.2",
    "rich",
]
dynamic = ["version"]

[[project.authors]]
name = "Tobias Raabe"
email = "raabe@posteo.de"

[dependency-groups]
coiled = ["coiled>=0.9.4"]
dask = ["dask[complete]", "distributed"]
docs = [
    "furo",
    "ipython",
    "matplotlib",
    "myst-parser",
    "nbsphinx",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-click",
    "sphinx-copybutton",
    "sphinx-design>=0.3",
    "sphinx-toolbox",
    "sphinxext-opengraph",
]
test = [
    "nbmake",
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
    {include-group = "coiled"},
    {include-group = "dask"},
]
typing = [
    "pytask-parallel",
    "ty",
    {include-group = "coiled"},
    {include-group = "dask"},
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://pytask-parallel.readthedocs.io/"
Changelog = "https://pytask-parallel.readthedocs.io/en/latest/changes.html"
Documentation = "https://pytask-parallel.readthedocs.io/"
Github = "https://github.com/pytask-dev/pytask-parallel"
Tracker = "https://github.com/pytask-dev/pytask-parallel/issues"

[project.entry-points.pytask]
pytask_parallel = "pytask_parallel.plugin"

[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/pytask_parallel/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
exclude = ["tests"]
only-packages = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-ignore = [
    "ANN401", # flake8-annotate typing.Any
    "COM812", # Comply with ruff-format.
    "ISC001", # Comply with ruff-format.
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "PLR2004", "S101"]
"docs/source/conf.py" = ["INP001"]
"docs_src/*" = ["ARG001", "D", "INP001", "S301"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.ty.terminal]
error-on-warning = true

[[tool.ty.overrides]]
include = ["src/**/_version.py"]

[tool.ty.overrides.rules]
invalid-type-form = "ignore"


[tool.pytest.ini_options]
addopts = ["--nbmake"]
# Do not add src since it messes with the loading of pytask-parallel as a plugin.
testpaths = ["tests"]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING.*:",
    "\\.\\.\\.",
    "def __repr__",
]
