[metadata]
name = pytask_parallel
description = Parallelize the execution of tasks with pytask.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pytask-dev/pytask-parallel
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Changelog = https://github.com/pytask-dev/pytask-parallel/blob/main/CHANGES.md
    Documentation = https://github.com/pytask-dev/pytask-parallel
    Github = https://github.com/pytask-dev/pytask-parallel
    Tracker = https://github.com/pytask-dev/pytask-parallel/issues

[options]
packages = find:
install_requires =
    click
    cloudpickle
    loky
    pybaum>=0.1.1
    pytask>=0.2
python_requires = >=3.7
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytask =
    pytask_parallel = pytask_parallel.plugin

[check-manifest]
ignore =
    src/pytask_parallel/_version.py
