[metadata]
name = pytask_parallel
description = Parallelize the execution of tasks with pytask.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pytask-dev/pytask-parallel
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/pytask-dev/pytask-parallel/blob/main/CHANGES.md
    Documentation = https://github.com/pytask-dev/pytask-parallel
    Github = https://github.com/pytask-dev/pytask-parallel
    Tracker = https://github.com/pytask-dev/pytask-parallel/issues

[options]
packages = find:
install_requires =
    attrs>=21.3.0
    click
    cloudpickle
    loky
    pluggy>=1.0.0
    pytask>=0.4.0
    rich
python_requires = >=3.8
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytask =
    pytask_parallel = pytask_parallel.plugin

[check-manifest]
ignore =
    src/pytask_parallel/_version.py
